categories background change

--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -15,7 +15,8 @@
                     id="categoria1"
                     type="radio"
                     value="Gastronomía"
-                    name="categorias"/>
+                    name="categorias"
+                    class="js-radio1"/>
                 Gastronomía</label>
             
                 <label for="categoria2">
@@ -23,7 +24,8 @@
                     id="categoria2"
                     type="radio"
                     value="Musica"
-                    name="categorias"/>
+                    name="categorias"
+                    class="js-radio2"/>
                 Música</label>
 
                 <label for="categoria3">
@@ -31,7 +33,8 @@
                     id="categoria3"
                     type="radio"
                     value="Cine"
-                    name="categorias"/>
+                    name="categorias"
+                    class="js-radio3"/>
                 Cine</label>
             </div>
         </fieldset>
@@ -45,30 +48,30 @@
             <h2>RELLENA</h2>
         </div>
 
-        <fieldset class="form__fillin--input">
-            <label for="eventName" class="labels">Nombre del evento</label>
-            <input type="text" id="eventName" class="inputs"/>
+        <fieldset class="form__fillin--input js-form">
+            <label for="field1" class="labels">Nombre del evento</label>
+            <input type="text" id="field1" class="inputs"/>
             
-            <label for="location" class="labels">Ubicación</label>
-            <input type="text" id="location" class="inputs"/>
+            <label for="field2" class="labels">Ubicación</label>
+            <input type="text" id="field2" class="inputs"/>
             
-            <label for="dates" class="labels">Fechas</label>
-            <input type="date" id="dates" class="inputs" />
+            <label for="field3" class="labels">Fechas</label>
+            <input type="text" id="field3" class="inputs" />
             
             <label for="image" class="labels">Foto o Logo</label>
             <input type="file" id="image" class="inputs" value="Añadir imagen"/>
             
-            <label for="price" class="labels">Precio</label>
-            <input type="number" id="price" class="inputs" />
+            <label for="field4" class="labels">Precio</label>
+            <input type="text" id="field4" class="inputs" />
             
-            <label for="qrcode" class="labels">QR</label>
-            <input type="file" id="qrcode" class="inputs" value="Añadir QR"/>
+            <label for="qr" class="labels">QR</label>
+            <input type="file" id="qr" class="inputs" value="Añadir QR"/>
             
-            <label for="website" class="labels">Web del organizador</label>
-            <input type="text" id="website" class="inputs" />
+            <label for="field5" class="labels">Web del organizador</label>
+            <input type="text" id="field5" class="inputs" />
             
-            <label for="sponsors" class="labels">Nombres de los patrocinadores</label>
-            <input type="text" id="sponsors" class="inputs" />
+            <label for="field6" class="labels">Nombres de los patrocinadores</label>
+            <input type="text" id="field6" class="inputs" />
         </fieldset>
         
 
