--- a/src/partials/preview.html
+++ b/src/partials/preview.html
@@ -4,20 +4,20 @@
             <button class="button__ticket--button">RESET</button>
         </div>
 
-        <div class="category">
-            <h2 class="category__title">NOMBRE FESTIVAL</h2>
-            <img src="./images/cartel-pruebas.jpg" alt="Esto es el logo del festival" class="category__image"/>
-            <p class="category__date">Fechas</p>
-            <p class="category__price">€€€</p>
-            <div class="category__location">
-                <i class="fa-solid fa-location-dot"></i>
-                <p>Ubicación</p>
+       <div class="category js-preview">
+            <h2 class="title js-preview-title"></h2>
+            <img src="" alt="" class="image"/>
+            <p class="date js-preview-date"></p>
+            <p class="price js-preview-price"></p>
+            <div class="location js-preview-location">
+                <!--<i class="fa-solid fa-location-dot"></i> -->
+                <p></p>
             </div>
-            <p class="category__web">www.festival.com</p>
-            <p class="category__sponsor">Patrocinado por Adalab y Eventigo</p>
-            <img src="./images/qr.jpg" alt="Esto es el QR de la iamgen" class="category__qr">
+            <p class="web js-preview-web"></p>
+            <p class="sponsor js-preview-sponsor"></p>
+            <img src="" alt="" class="qr">
         
-        </div>
+        </div> 
 
     </div>
 </section>
