--- a/src/scss/layout/_preview.scss
+++ b/src/scss/layout/_preview.scss
@@ -1,5 +1,4 @@
 .ticket__section {
-    padding: 30px 50px;
     background-color:$background_landing;
     font-family: $font_family;
     $background_landing: #F2F2C9;
@@ -30,6 +29,7 @@
     }
 }
 
+/*
 
 .ticket {
     margin-bottom: 20px;
@@ -79,5 +79,5 @@
       }
     }
 }
-
+*/
 
