--- a/src/scss/layout/_categories.scss
+++ b/src/scss/layout/_categories.scss
@@ -17,19 +17,20 @@
             width: 360px;
             height: 200px;
         }
-        @media (min-width: 1024px) {
-            width: 680px;
-            height: 300px;
+        @media (min-width: 970px) {
+            width: 600px;
+            height: 280px;
         }
 
         & .title {
             font-size: 2rem;
             font-weight: bold;     
-            text-decoration: dotted underline;
-            grid-column: 3/6;
+            text-decoration: none;
+            grid-column: 2/5;
             grid-row: 1/2;
             align-self: center;
-            justify-self: flex-end;
+            justify-self: center;
+            text-align: center;
         }
         
         & .image {
@@ -40,19 +41,19 @@
     
         & .date {
             font-size: 1.4rem;
-            grid-column: 4/6;
+            grid-column: 2/5;
             grid-row: 2/4;
             align-self: center;
             font-weight: bold;
-            justify-self: flex-end;
+            justify-self: center;
         }
     
         & .price {
             font-size: 2rem;
-            grid-column: 3/4;
+            grid-column: 1/2;
             grid-row: 2/4;
             align-self: center;
-            justify-self: flex-end;
+            justify-self: center;
             font-weight: bold;
         }
     
@@ -60,10 +61,10 @@
             font-size: 1.4rem;
             font-weight: bold;
             display: inline-block;
-            grid-column: 2/3;
+            grid-column: 4/6;
             grid-row: 2/4;
             align-self: center;
-            justify-self: flex-start;
+            justify-self: flex-end;
             
             & i {
                 color: black;
@@ -78,15 +79,15 @@
     
         & .web {
             font-size: 0.8rem;
-            grid-column: 2/4;
+            grid-column: 1/3;
             grid-row: 4/5;
             align-self: end;
-            justify-self: center;
+            justify-self: flex-start;
         }
     
         & .sponsor {
             font-size: 0.8rem;
-            grid-column: 4/6;
+            grid-column: 3/6;
             grid-row: 4/5;
             align-self: end;
             justify-self: flex-end;
@@ -109,15 +110,12 @@
 
     & .title {     
         text-decoration: dashed underline;
-        grid-column: 2/5;
-        justify-self: center;
     }
     
     & .image {
     }
 
     & .date {
-        
     }
 
     & .price {
@@ -135,7 +133,6 @@
     }
 
     & .web {
-        grid-column: 1/3;
 
     }
 
@@ -156,164 +153,100 @@
     color: white;
 
     & .title {
-        font-size: 2.5rem;
-        font-weight: bold;
         border: 1px solid white;
-        grid-column: 1/5;
-        grid-row: 1/2;
-        align-self: center;
-        justify-self: center;
+        text-decoration: none;
     }
     
     & .image {
-        width: 50px;
-        grid-column: 5/6;
-        grid-row: 1/2;
-        justify-self: end;
     }
 
     & .date {
-        font-size: 1.5rem;
-        grid-column: 2/4;
-        grid-row: 2/4;
-        align-self: center;
-        font-weight: bold;
         color: $text_color;
     }
 
     & .price {
-        font-size: 2rem;
-        grid-column: 1/2;
-        grid-row: 2/4;
-        align-self: center;
-        justify-self: center;
-        font-weight: bold;
     }
 
     & .location {
-        font-size: 1.4rem;
-        font-weight: bold;
-        display: inline-block;
-        grid-column: 4/6;
-        grid-row: 2/4;
-        align-self: center;
-        justify-self: center;
-
         & i {
-            color: white;
-            display: inline;
-            margin-right: 3px;
         }
-        & p {display: inline;}
+
+        & p {
+            display: inline;
+        }
     }
 
     & .web {
-        font-size: 0.8rem;
-        grid-column: 1/3;
-        grid-row: 4/5;
-        align-self: end;
-        color: $background_landing;
     }
 
     & .sponsor {
-        font-size: 0.8rem;
-        grid-column: 3/5;
-        grid-row: 4/5;
-        align-self: end;
-        color: $background_landing;
     }
 
     & .qr {
-        width: 50px;
-        grid-column: 5/6;
-        grid-row: 4/5;
-        justify-self: end;
     }
 }
 
-/*.category__gastronomy {
+.category__gastronomy {
     background-image: url(/images/gastronomia.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
 
     & .title {
-        font-size: 2.6rem;
-        font-weight: bold;
-        border: 1px solid white;
-        grid-column: 3/5;
-        grid-row: 1/2;
-        align-self: end;
-        justify-self: center;
+        border: 2px solid $text_color;
+        padding: 5px;
         color: $text_color;
+        grid-column: 3/6;
     }
     
     & .image {
-        width: 50px;
-        grid-column: 3/4;
-        grid-row: 4/5;
-        justify-self: start;
     }
 
     & .date {
-        font-size: 1.5rem;
-        grid-column: 2/4;
-        grid-row: 2/4;
+        grid-column: 4/6;
+        grid-row: 2/3;
         align-self: center;
-        font-weight: bold;
+        justify-self: flex-end;
         color: $text_color;
     }
 
     & .price {
-        font-size: 2rem;
-        grid-column: 5/6;
-        grid-row: 1/2;
+        grid-column: 2/4;
+        grid-row: 2/3;
         align-self: center;
         justify-self: center;
-        font-weight: bold;
         color: $text_color;
     }
 
     & .location {
-        font-size: 1.4rem;
-        font-weight: bold;
         display: inline-block;
-        grid-column: 4/6;
-        grid-row: 2/4;
+        grid-column: 3/6;
+        grid-row: 3/4;
         align-self: center;
         justify-self: center;
         color: $text_color;
 
         & i {
-            color: $text_color;
-            display: inline;
-            margin-right: 3px;
         }
-        & p {display: inline;}
+        & p {
+            display: inline;
+        }
     }
 
     & .web {
-        font-size: 0.8rem;
-        grid-column: 4/6;
-        grid-row: 4/5;
+        grid-column: 2/6;
         align-self: center;
         justify-self: end;
         color: $text_color
     }
 
     & .sponsor {
-        font-size: 0.8rem;
-        grid-column: 4/6;
-        grid-row: 4/5;
+        grid-column: 2/6;
         align-self: end;
         justify-self: end;
         color: $text_color;
     }
 
     & .qr {
-        width: 50px;
-        grid-column: 2/3;
-        grid-row: 4/5;
-        justify-self: start;
     }
-}*/
+}
