form aspect changed

--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -49,29 +49,46 @@
         </div>
 
         <fieldset class="form__fillin--input js-form">
-            <label for="field1" class="labels">Nombre del evento</label>
-            <input type="text" id="field1" class="inputs"/>
             
-            <label for="field2" class="labels">Ubicación</label>
-            <input type="text" id="field2" class="inputs"/>
+            <div class="answers">
+                <label for="field1" class="labels">Nombre del evento</label>
+                <input type="text" id="field1" class="inputs"/>
+            </div>
+                        
+            <div class="answers">
+                <label for="field2" class="labels">Ubicación</label>
+                <input type="text" id="field2" class="inputs"/>
+            </div>
             
-            <label for="field3" class="labels">Fechas</label>
-            <input type="text" id="field3" class="inputs" />
+            <div class="answers"> 
+                <label for="field3" class="labels">Fechas</label>
+                <input type="text" id="field3" class="inputs" />
+            </div>
             
-            <label for="image" class="labels">Foto o Logo</label>
-            <input type="file" id="image" class="inputs" value="Añadir imagen"/>
+            <div class="answers">
+                <label for="image" class="labels">Foto o Logo</label>
+                <input type="file" id="image" class="inputs" value="Añadir imagen"/>
+            </div>
             
-            <label for="field4" class="labels">Precio</label>
-            <input type="text" id="field4" class="inputs" />
+            <div class="answers">
+                <label for="field4" class="labels">Precio</label>
+                <input type="text" id="field4" class="inputs" />
+            </div>
             
-            <label for="qr" class="labels">QR</label>
-            <input type="file" id="qr" class="inputs" value="Añadir QR"/>
+            <div class="answers">
+                <label for="qr" class="labels">QR</label>
+                <input type="file" id="qr" class="inputs" value="Añadir QR"/>
+            </div>
             
-            <label for="field5" class="labels">Web del organizador</label>
-            <input type="text" id="field5" class="inputs" />
+            <div class="answers">
+                <label for="field5" class="labels">Web del organizador</label>
+                <input type="text" id="field5" class="inputs" />
+            </div>
             
-            <label for="field6" class="labels">Nombres de los patrocinadores</label>
-            <input type="text" id="field6" class="inputs" />
+            <div class="answers">
+                <label for="field6" class="labels">Nombres de los patrocinadores</label>
+                <input type="text" id="field6" class="inputs" />
+            </div>
         </fieldset>
         
 
