--- a/src/partials/main_landing.html
+++ b/src/partials/main_landing.html
@@ -14,7 +14,7 @@
     </a>
  </section>
     <button class="button_landing " target="_blank">
-        <a href="./tickets.html">Crear Entradas</a>
+        <a href="./tickets.html">CREAR ENTRADAS</a>
     </button>
 </main>
 
