reset function done

--- a/src/partials/preview.html
+++ b/src/partials/preview.html
@@ -1,7 +1,7 @@
 <section class="ticket__section">
     <div class="ticket__wrapper">
         <div class="button__ticket">
-            <button class="button__ticket--button">RESET</button>
+            <button class="button__ticket--button js-reset">RESET</button>
         </div>
 
        <div class="category js-preview">
