--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -9,7 +9,7 @@
                 
             <h4 class="options__title">Elige una categoría</h4>
 
-            <div class="options">
+            <div class="options js-options">
                 <label for="categoria1">
                 <input
                     id="categoria1"
@@ -52,42 +52,42 @@
             
             <div class="answers">
                 <label for="field1" class="labels">Nombre del evento</label>
-                <input type="text" id="field1" class="inputs"/>
+                <input type="text" id="field1" class="inputs js-inputs"/>
             </div>
                         
             <div class="answers">
                 <label for="field2" class="labels">Ubicación</label>
-                <input type="text" id="field2" class="inputs"/>
+                <input type="text" id="field2" class="inputs js-inputs"/>
             </div>
             
             <div class="answers"> 
                 <label for="field3" class="labels">Fechas</label>
-                <input type="text" id="field3" class="inputs" />
+                <input type="text" id="field3" class="inputs js-inputs" />
             </div>
             
             <div class="answers">
                 <label for="image" class="labels">Foto o Logo</label>
-                <input type="file" id="image" class="inputs" value="Añadir imagen"/>
+                <input type="file" id="image" class="inputs js-inputs" value="Añadir imagen"/>
             </div>
             
             <div class="answers">
                 <label for="field4" class="labels">Precio</label>
-                <input type="text" id="field4" class="inputs" />
+                <input type="text" id="field4" class="inputs js-inputs" />
             </div>
             
             <div class="answers">
                 <label for="qr" class="labels">QR</label>
-                <input type="file" id="qr" class="inputs" value="Añadir QR"/>
+                <input type="file" id="qr" class="inputs js-inputs" value="Añadir QR"/>
             </div>
             
             <div class="answers">
                 <label for="field5" class="labels">Web del organizador</label>
-                <input type="text" id="field5" class="inputs" />
+                <input type="text" id="field5" class="inputs js-inputs" />
             </div>
             
             <div class="answers">
                 <label for="field6" class="labels">Nombres de los patrocinadores</label>
-                <input type="text" id="field6" class="inputs" />
+                <input type="text" id="field6" class="inputs js-inputs" />
             </div>
         </fieldset>
         
