added collapsed function

--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -2,10 +2,10 @@
     <section class="form__design">
         <div class="form__design--title">
             <i class="fa-solid fa-pen-nib"></i>
-            <h2>DISEÑA</h2>
+            <h2 class="js-titleDesign">DISEÑA</h2>
         </div>
 
-        <fieldset class="form__design--options">
+        <fieldset class="form__design--options hidden js-design">
                 
             <h4 class="options__title">Elige una categoría</h4>
 
@@ -45,10 +45,10 @@
     <section class="form__fillin">
         <div class="form__fillin--title">
             <i class="fa-regular fa-keyboard"></i>
-            <h2>RELLENA</h2>
+            <h2 class="js-titleFillin">RELLENA</h2>
         </div>
 
-        <fieldset class="form__fillin--input js-form">
+        <fieldset class="form__fillin--input js-form hidden js-fillin">
             
             <div class="answers">
                 <label for="field1" class="labels">Nombre del evento</label>
@@ -97,14 +97,14 @@
     <section class="form__share">
         <div class="form__share--title">
             <i class="fa-solid fa-share"></i>
-            <h2>COMPARTE</h2>
+            <h2 class="js-titleShare">COMPARTE</h2>
         </div>
 
-        <a href="./final_design.html" class="form__share--button" target="_blank">
+        <a href="./final_design.html" class="form__share--button hidden js-share1" target="_blank">
             <i class="fa-solid fa-ticket"></i>
             CREAR ENTRADA</a>
 
-        <div class="form__share--link">
+        <div class="form__share--link hidden js-share2">
             <h5>La entrada ha sido creada:</h5>
             <p>url de la entrada que no se muy bien como se hace.</p>
             <a href="#">Compartir en Twitter</a>
