logos and image reset and image load

--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -66,8 +66,8 @@
             </div>
             
             <div class="answers">
-                <label for="image" class="labels">Foto o Logo</label>
-                <input type="file" id="image" class="inputs js-inputs" value="Añadir imagen"/>
+                <label for="photo" class="labels">Foto o Logo</label>
+                <input type="file" id="photo" class="inputs js-inputs js-image" value="Añadir imagen"/>
             </div>
             
             <div class="answers">
@@ -76,8 +76,8 @@
             </div>
             
             <div class="answers">
-                <label for="qr" class="labels">QR</label>
-                <input type="file" id="qr" class="inputs js-inputs" value="Añadir QR"/>
+                <label for="field7" class="labels">QR</label>
+                <input type="file" id="field7" class="inputs js-inputs js-qr" value="Añadir QR"/>
             </div>
             
             <div class="answers">
@@ -107,7 +107,13 @@
         <div class="form__share--link hidden js-share2">
             <h5>La entrada ha sido creada:</h5>
             <p>url de la entrada que no se muy bien como se hace.</p>
-            <a href="#">Compartir en Twitter</a>
+            <div class="social-media">
+                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+            </div>
+
+            
 
         </div>
 
