--- a/src/partials/preview.html
+++ b/src/partials/preview.html
@@ -6,7 +6,7 @@
 
        <div class="category js-preview">
             <h2 class="title js-preview-title"></h2>
-            <img src="" alt="" class="image"/>
+            <img src="" alt="" class="image js-image-preview"/>
             <p class="date js-preview-date"></p>
             <p class="price js-preview-price"></p>
             <div class="location js-preview-location">
@@ -15,7 +15,7 @@
             </div>
             <p class="web js-preview-web"></p>
             <p class="sponsor js-preview-sponsor"></p>
-            <img src="" alt="" class="qr">
+            <img src="" alt="" class="qr js-qr-preview">
         
         </div> 
 
