--- a/src/scss/layout/_categories.scss
+++ b/src/scss/layout/_categories.scss
@@ -26,7 +26,7 @@
             font-size: 2rem;
             font-weight: bold;     
             text-decoration: none;
-            grid-column: 2/5;
+            grid-column: 1/5;
             grid-row: 1/2;
             align-self: center;
             justify-self: center;
@@ -34,7 +34,7 @@
         }
         
         & .image {
-            width: 70px;
+            width: 50px;
             grid-column: 5/6;
             grid-row: 1/2;
         }
@@ -91,13 +91,15 @@
             grid-row: 4/5;
             align-self: end;
             justify-self: flex-end;
+            
         }
     
         & .qr {
-            width: 50px;
+            width: 30px;
             grid-column: 5/6;
             grid-row: 4/5;
             justify-self: end;
+            transform: translateY(-5px)
         }
 }
 
@@ -145,7 +147,8 @@
 
     & .title {
         color: $text_color;
-        grid-column: 3/6;
+        background-color: white;
+        padding: 2px;
     }
     
     & .date {
@@ -178,8 +181,7 @@
     }
 
     & .web {
-        grid-column: 2/6;
-        align-self: center;
+        align-self: flex-end;
         justify-self: end;
         color: $text_color
     }
