--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -16,6 +16,10 @@
     color: $title_color;
     border-bottom: 1px solid $title_color;
     &--title{
+        cursor: pointer;
+        :hover {
+            color: $background_foot-head;
+        }
         & h2 {
             font-weight: bold;
             font-size: 1.7rem;
@@ -66,6 +70,10 @@
 
     &--title{
         padding-left: 10px;
+        cursor: pointer;
+        :hover {
+            color: $background_foot-head;
+        }
 
     }
 
@@ -121,6 +129,10 @@
 
     &--title {
         padding-left: 10px;
+        cursor: pointer;
+        :hover {
+            color: $background_foot-head;
+        }
 
         & h2 {
             font-weight: bold;
@@ -171,15 +183,15 @@
        }
        & a {
         align-self: center;
-        background-color: #00A0F5;
-        color: white;
-        font-size: 1.2rem;
-        padding: 15px;
-        text-decoration: none;
-        border-radius: 5px;
+        color: $text_color;
+        font-size: 2rem;
         margin: 10px;
        }
     }
+}
+
+.social-media {
+    margin-top: 10px;
 }
 
 
