--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -72,7 +72,7 @@
             
             <div class="answers">
                 <label for="field4" class="labels">Precio</label>
-                <input type="text" id="field4" class="inputs js-inputs" />
+                <input type="number" id="field4" class="inputs js-inputs js-price" />
             </div>
             
             <div class="answers">
