--- a/src/scss/layout/_categories.scss
+++ b/src/scss/layout/_categories.scss
@@ -7,6 +7,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
+    
 
         @media (min-width: 580px) {
             width: 400px;
@@ -31,6 +32,11 @@
             align-self: center;
             justify-self: center;
             text-align: center;
+            @media (min-width: 970px){
+                font-size: 4rem;
+
+            }
+
         }
         
         & .image {
@@ -51,27 +57,37 @@
     
         & .date {
             font-size: 1.4rem;
-            grid-column: 2/5;
+            grid-column: 1/3;
             grid-row: 2/4;
             align-self: center;
             font-weight: bold;
             justify-self: center;
+            @media (min-width: 970px){
+                font-size: 2rem;
+
+            }
+            
         }
     
         & .price {
             font-size: 2rem;
             grid-column: 1/2;
-            grid-row: 2/4;
+            grid-row: 4/5;
             align-self: center;
             justify-self: center;
             font-weight: bold;
+            transform: translateY(-5px);
+            @media (min-width: 970px){
+                font-size: 3rem;
+
+            }
         }
     
         & .location {
             font-size: 1.4rem;
             font-weight: bold;
             display: inline-block;
-            grid-column: 4/6;
+            grid-column: 3/6;
             grid-row: 2/4;
             align-self: center;
             justify-self: flex-end;
@@ -85,6 +101,10 @@
             & p {
                 display: inline;
             }
+            @media (min-width: 970px){
+                font-size: 2rem;
+
+            }
         }
     
         & .web {
@@ -93,6 +113,10 @@
             grid-row: 4/5;
             align-self: end;
             justify-self: flex-start;
+            @media (min-width: 970px){
+                font-size: 1.2rem;
+
+            }
         }
     
         & .sponsor {
@@ -101,6 +125,10 @@
             grid-row: 4/5;
             align-self: end;
             justify-self: flex-end;
+            @media (min-width: 970px){
+                font-size: 1.2rem;
+
+            }
             
         }
     
@@ -125,6 +153,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     color: $background_landing;
+    font-family: 'Courier New', Courier, monospace;
 
     & .title {     
         text-decoration: dashed underline;
@@ -137,6 +166,9 @@
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
+    font-family: "Ubuntu", serif;
+    font-weight: 700;
+    font-style: normal;
 
     & .title {
         border: 1px solid white;
@@ -144,7 +176,9 @@
     }
 
     & .date {
-        color: $text_color;
+        color: white;
+        background-color: $url_color;
+        padding: 5px;
     }
 
     & .location {
@@ -160,11 +194,12 @@
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
+    font-family: "Playwrite AU SA", serif;
 
     & .title {
         color: $text_color;
         background-color: white;
-        padding: 2px;
+        padding: 5px;
     }
     
     & .date {
@@ -190,6 +225,7 @@
         align-self: center;
         justify-self: flex-end;
         color: $text_color;
+        transform: translateY(-15px);
 
         & p {
             display: inline;
