added clasList.remove to socialMedia

--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -109,7 +109,7 @@
         <div class="form__share--link hidden js-share2">
             <h5 class="hidden js-created-message">La entrada ha sido creada:</h5>
             <a href="./final_design.html" class="hidden js-link-final-design" target="_blank">Pincha aquí para ver tu entrada</a>
-            <div class="social-media hidden">
+            <div class="social-media  js-social-media hidden">
                 <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-tiktok"></i></a>
