modified href from social media links

--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -109,10 +109,10 @@
         <div class="form__share--link hidden js-share2">
             <h5 class="hidden js-created-message">La entrada ha sido creada:</h5>
             <a href="./final_design.html" class="hidden js-link-final-design" target="_blank">Pincha aquí para ver tu entrada</a>
-            <div class="social-media  js-social-media hidden">
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+            <div class="social-media  js-social-media ">
+                <a href="https://x.com/" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
             </div>
 
             
