added hidden class to social media section

--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -52,12 +52,12 @@
             
             <div class="answers">
                 <label for="field4" class="labels">Nombre del evento</label>
-                <input type="text" id="field4" class="inputs js-inputs"/>
+                <input type="text" id="field4" class="inputs js-inputs" />
             </div>
                         
             <div class="answers">
                 <label for="field2" class="labels">Ubicación</label>
-                <input type="text" id="field2" class="inputs js-inputs"/>
+                <input type="text" id="field2" class="inputs js-inputs" />
             </div>
             
             <div class="answers"> 
@@ -67,7 +67,7 @@
             
             <div class="answers">
                 <label for="photo" class="labels">Foto o Logo</label>
-                <input type="file" id="photo" class="inputs js-inputs js-image" value="Añadir imagen"/>
+                <input type="file" id="photo" class="inputs js-inputs js-image" value="Añadir imagen" />
             </div>
             
             <div class="answers">
@@ -77,7 +77,7 @@
             
             <div class="answers">
                 <label for="field7" class="labels">QR</label>
-                <input type="file" id="field7" class="inputs js-inputs js-qr" value="Añadir QR"/>
+                <input type="file" id="field7" class="inputs js-inputs js-qr" value="Añadir QR" />
             </div>
             
             <div class="answers">
@@ -109,7 +109,7 @@
         <div class="form__share--link hidden js-share2">
             <h5 class="hidden js-created-message">La entrada ha sido creada:</h5>
             <a href="./final_design.html" class="hidden js-link-final-design" target="_blank">Pincha aquí para ver tu entrada</a>
-            <div class="social-media  js-social-media ">
+            <div class="social-media  js-social-media hidden">
                 <a href="https://x.com/" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
